Used Style Sheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike Website</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -21,7 +21,7 @@
         </ol>
       </nav>
       <div>
-        <button class="btn">Contact</button>
+        <button class="btn"><a href="#Contact">Contact</a></button>
       </div>
     </header>
     <main>
@@ -32,15 +32,15 @@
             Step into the legacy of style and performance with the iconic Nike
             Air Jordan. Designed for those who dare to stand out, these sneakers
             blend classic aesthetics with modern innovation. Whether on the
-            court or the streets, make a statement with every step.
+            court or the streets, make a statement with every step. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, aut! Nulla sequi voluptatem, accusamus excepturi ipsum totam ipsam repellendus nam.
           </p>
           <button class="btn-2">Buy Now</button>
           <button class="btn-2">View More</button>
         </div>
         <div class="sub-section"></div>
       </section>
-      <section id="About">
-        <div>
+      <section class="section-2" id="About">
+        <div class="about-context">
           <h1>About Us</h1>
           <p>
             At Nike, we're more than just a sportswear company – we're a
@@ -49,17 +49,22 @@
             to excellence drives us to create products that not only enhance
             performance but also empower individuals to exceed their limits.
             Join us on this journey as we redefine what's possible in sport and
-            beyond.
+            beyond. 
           </p>
+          <br>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus corrupti porro consequuntur ab incidunt perferendis unde veritatis dolorem cum quidem.</p>
+        </div>
+        <div>
+          <img src="Images/Black Jordan.webp" width="300px" alt="">
         </div>
       </section>
-      <section id="Products">
+      <section class="Products" id="Products">
         <div>
           <h1>Lets Make Some Shopping</h1>
         </div>
-        <div>
-          <div>
-            <img src="Images/Black Jordan.webp" alt="" width="200px" />
+        <div class="main-Product-div">
+          <div class="product-card">
+            <img src="Images/Black Jordan.webp" style="background-color: transparent;" alt="" width="200px" />
             <h3>Product 1</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
