--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -32,7 +32,9 @@
             Step into the legacy of style and performance with the iconic Nike
             Air Jordan. Designed for those who dare to stand out, these sneakers
             blend classic aesthetics with modern innovation. Whether on the
-            court or the streets, make a statement with every step. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, aut! Nulla sequi voluptatem, accusamus excepturi ipsum totam ipsam repellendus nam.
+            court or the streets, make a statement with every step. Lorem ipsum,
+            dolor sit amet consectetur adipisicing elit. Velit, aut! Nulla sequi
+            voluptatem, accusamus excepturi ipsum totam ipsam repellendus nam.
           </p>
           <button class="btn-2">Buy Now</button>
           <button class="btn-2">View More</button>
@@ -49,13 +51,17 @@
             to excellence drives us to create products that not only enhance
             performance but also empower individuals to exceed their limits.
             Join us on this journey as we redefine what's possible in sport and
-            beyond. 
+            beyond.
           </p>
-          <br>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus corrupti porro consequuntur ab incidunt perferendis unde veritatis dolorem cum quidem.</p>
+          <br />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
+            corrupti porro consequuntur ab incidunt perferendis unde veritatis
+            dolorem cum quidem.
+          </p>
         </div>
         <div>
-          <img src="Images/Black Jordan.webp" width="300px" alt="">
+          <img src="Images/Black Jordan.webp" width="300px" alt="" />
         </div>
       </section>
       <section class="Products" id="Products">
@@ -64,15 +70,21 @@
         </div>
         <div class="main-Product-div">
           <div class="product-card">
-            <img src="Images/Black Jordan.webp" style="background-color: transparent;" alt="" width="200px" />
+            <img
+              src="Images/Black Jordan.webp"
+              style="background-color: transparent"
+              alt=""
+              width="200px"
+            />
             <h3>Product 1</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
               eligendi.
             </p>
+
             <button>Buy Now</button>
           </div>
-          <div>
+          <div class="product-card">
             <img src="Images/Blue Jordan 2.jpeg" alt="" />
             <h3>Product 3</h3>
             <p>
@@ -81,7 +93,7 @@
             </p>
             <button>Buy Now</button>
           </div>
-          <div>
+          <div class="product-card">
             <img src="Images/Red 3.jpeg" alt="" />
             <h3>Product 2</h3>
             <p>
@@ -90,31 +102,58 @@
             </p>
             <button>Buy Now</button>
           </div>
+          <!-- <div class="product-card">
+            <img src="Images/Red 3.jpeg" alt="" />
+            <h3>Product 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+              eligendi.
+            </p>
+            <button>Buy Now</button>
+          </div> -->
         </div>
       </section>
+
+      <!-- <p>Web development bootcacmp 2025</p> (Block level element) -->
+      <!-- <span>Web development bootcacmp 2025</span> (Inline element) -->
       <section id="Contact">
-        <h1>Contact Us</h1>
+        <h1 class="contact-heading">Contact Us</h1>
         <form action="">
-          <label for="FullName">Full Name:</label>
-          <input type="text" />
-          <br />
-          <br />
-          <label for="Email">Email</label>
-          <input type="email" />
-          <br />
-          <br />
-          <label for="Password">Password</label>
-          <input type="password" />
-          <br />
-          <br />
-          <label for="Number">Number: </label>
-          <input type="number" />
-          <br />
-          <input type="checkbox" name="Technologies" id="Technologies" />
-          <label for="">HTML</label>
-          <input type="checkbox" name="Technologies" id="Technologies" />
-          <label for="">CSS</label>
-          <br />
+          <div class="contact-check">
+            <label for="FullName">Full Name:</label>
+            <input
+              type="text"
+              placeholder="Enter your full name"
+              required="true"
+              minlength="10"
+            />
+          </div>
+
+          <div>
+            <label for="Email">Email</label>
+            <input
+              type="email"
+              placeholder="Enter your email address"
+              required="true"
+            />
+          </div>
+
+          <div>
+            <label for="Password">Password</label>
+            <input type="password" />
+          </div>
+
+          <div>
+            <label for="Number">Number: </label>
+            <input type="number" />
+          </div>
+
+          <!-- <div>
+            <input type="checkbox" name="Technologies" id="Technologies" />
+            <label for="">HTML</label>
+            <input type="checkbox" name="Technologies" id="Technologies" />
+            <label for="">CSS</label>
+          </div> -->
           <button>Submit</button>
         </form>
       </section>
