Session 3 Javascript basics

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               eligendi.
             </p>
 
-            <button>Buy Now</button>
+            <button id ="btn-3">Buy Now</button>
           </div>
           <div class="product-card">
             <img src="Images/Blue Jordan 2.jpeg" alt="" />
@@ -100,7 +100,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
               eligendi.
             </p>
-            <button>Buy Now</button>
+            <button id = "btn-4" onclick = "changecolor(this)">Buy Now</button>
           </div>
           <!-- <div class="product-card">
             <img src="Images/Red 3.jpeg" alt="" />
@@ -160,4 +160,5 @@
     </main>
     <footer></footer>
   </body>
+  <script src="script.js"></script>
 </html>
