--- a/Session 1 - 4/public/index.html
+++ b/Session 1 - 4/public/index.html
@@ -21,6 +21,7 @@
         </ol>
       </nav>
       <div>
+        <button class="btn"><a href="#Contact">Login</a></button>
         <button class="btn"><a href="#Contact">Contact</a></button>
       </div>
     </header>
